# Rust-wasm-POC

./: README.md
utils/: Cargo.toml  index.html  index.js  manifest.json  package-lock.json  package.json  popup.html  utils.gc.wasm  utils.wasm  wasm_worker.js  worker.js
utils/src/: lib.rs
