[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
dusk-pki = { version = "0.8", default-feautures= false}
rand = "0.8.3"
rand_distr = "0.3.0"
sha2 = {version = "0.9.8", default-feautures= false}
js-sys = "0.3.55"
dusk-bytes = " 0.1.5"
bip0039 = "0.9.0"


[lib]
crate-type = ["cdylib"]

